finished section head

--- a/index.html
+++ b/index.html
@@ -2,11 +2,56 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Title</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        
+        <!--wrapper started-->
+        <div class="wrapper">
+            <!--section_head started-->
+            <div class="section_head">
+                <!--triangle started-->
+                <div class="triangle"></div><!-- ./triangle-->
+                <!--content started-->
+                <div class="content">
+                    <!--header started-->
+                    <header>
+                        <!--logo started-->
+                        <div class="logo">
+                            <img src="images/head/logo.png">
+                        </div><!-- ./logo-->
+                        <!--menu started-->
+                        <div class="menu">
+                            <nav>
+                                <ul class="ul_list">
+                                    <li><a href="">Event Details</a></li>
+                                    <li><a href="">Speakers</a></li>
+                                    <li><a href="">Sponsors</a></li>
+                                    <li><a href="">Past Events</a></li>
+                                    <li><a href="">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div><!-- ./menu-->
+                    </header><!-- ./header-->
+                    <!--Countdown_Timer started-->
+                    <div class="Countdown_Timer">
+                        <p id="demo" class="timer"></p>
+                        <span id="text_demo"></span>
+                    </div><!-- ./Countdown_Timer-->
+                    <!--icons started -->
+                    <div class="icons">
+                       <ul class="ul_icon">
+                           <li><img src="images/head/icon1.png"></li>
+                           <li><img src="images/head/icon2.png"></li>
+                           <li><img src="images/head/icon3.png"></li>
+                           <li><img src="images/head/icon4.png"></li>
+                           <li><img src="images/head/icon5.png"></li>
+                       </ul> 
+                    </div><!-- ./icons-->
+                </div><!-- ./content-->
+            </div><!-- ./section_head -->
+        </div><!-- ./wrapper-->
 
     <script src="js/js.js"></script>
 
